feat: use virtual threads in coordinator to remove worker connection limit